--- a/index.html
+++ b/index.html
@@ -3,124 +3,145 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Binguera</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/site.css" />
-    <link rel="stylesheet" href="css/keys.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
         integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <!--3rd party scripts-->
-    <script src="Scripts/vue.min.js"></script>
-    <script src="Scripts/shortcut.min.js"></script>
+    <script src="scripts/vue.min.js"></script>
 </head>
 
 <body>
-    <div id="app" class="maingrid-container">
-        <div class="maingrid-header">
-            <div class="headergrid-container">
-                <div class="headergrid-logo">
-                    <a href="index.html">
-                        <!-- <img src="images/bingo-logo.png" width="40px" height="40px" alt="Bingo" /> -->
-                    </a>
-                </div>
-                <div class="headergrid-links">
-                    <a href="https://github.com/fellipeborges/bingo" target="_blank"
-                        title="Código fonte no Github">Código fonte</a> <i class="fas fa-code"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div id="app" v-cloak class="maingrid-container">
 
-        <div class="maingrid-body">
+        <!-- Cartela -->
+        <div class="cartela">
+            <table v-bind:style="currentGame.tableStyle">
+                <thead>
+                    <tr>
+                        <th>B</th>
+                        <th>I</th>
+                        <th>N</th>
+                        <th>G</th>
+                        <th>O</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Line B-->
+                    <tr>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[0] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(0)">{{this.currentGame.numbersB[0]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[1] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(1)">{{this.currentGame.numbersI[0]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[2] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(2)">{{this.currentGame.numbersN[0]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[3] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(3)">{{this.currentGame.numbersG[0]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[4] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(4)">{{this.currentGame.numbersO[0]}}</td>
+                    </tr>
+
+                    <!-- Line I-->
+                    <tr>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[5] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(5)">{{this.currentGame.numbersB[1]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[6] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(6)">{{this.currentGame.numbersI[1]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[7] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(7)">{{this.currentGame.numbersN[1]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[8] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(8)">{{this.currentGame.numbersG[1]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[9] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(9)">{{this.currentGame.numbersO[1]}}</td>
+                    </tr>
+
+                    <!-- Line N-->
+                    <tr>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[10] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(10)">{{this.currentGame.numbersB[2]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[11] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(11)">{{this.currentGame.numbersI[2]}}</td>
+                        <td class="numero-marcado"><i class="fas fa-gift"></i></td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[13] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(13)">{{this.currentGame.numbersG[2]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[14] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(14)">{{this.currentGame.numbersO[2]}}</td>
+                    </tr>
+
+                    <!-- Line G-->
+                    <tr>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[15] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(15)">{{this.currentGame.numbersB[3]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[16] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(16)">{{this.currentGame.numbersI[3]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[17] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(17)">{{this.currentGame.numbersN[3]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[18] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(18)">{{this.currentGame.numbersG[3]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[19] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(19)">{{this.currentGame.numbersO[3]}}</td>
+                    </tr>
+
+                    <!-- Line O-->
+                    <tr>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[20] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(20)">{{this.currentGame.numbersB[4]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[21] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(21)">{{this.currentGame.numbersI[4]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[22] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(22)">{{this.currentGame.numbersN[4]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[23] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(23)">{{this.currentGame.numbersG[4]}}</td>
+                        <td v-bind:class="[this.currentGame.numerosMarcados[24] ? 'numero-marcado' : '']"
+                            v-on:click="marcarNumero(24)">{{this.currentGame.numbersO[4]}}</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- Faltam -->
+            <br>
+            <p class="faltam" v-if="qtdeNumerosFaltam >= 6">
+                Faltam {{this.qtdeNumerosFaltam}} números para a cartela cheia
+            </p>
+            <p class="faltam faltam-destaque" v-if="qtdeNumerosFaltam >= 2 && qtdeNumerosFaltam <= 5">
+                Faltam apenas {{this.qtdeNumerosFaltam}} números para a cartela cheia
+            </p>
+            <p class="faltam faltam-apenasum" v-if="qtdeNumerosFaltam == 1">
+                Falta apenas 1 número para a cartela cheia!
+            </p>
+            <p class="faltam faltam-venceu" v-if="qtdeNumerosFaltam == 0">
+                Parabéns, você venceu!
+            </p>
 
             <!-- Botão Gerar cartela -->
-            <div class="gerar-cartela" v-if="currentGame.state != 'on'">
-                <button v-on:click="gerarCartela">G.C</button>
+            <br>
+            <button v-on:click="gerarCartela">Gerar nova cartela</button>
+            
+            <!-- Dev tools -->
+            <div v-if="false">
+                <button v-on:click="marcarNumero(0);marcarNumero(1);marcarNumero(2);marcarNumero(3);marcarNumero(4);marcarNumero(5);marcarNumero(6);marcarNumero(7);marcarNumero(8);marcarNumero(9);marcarNumero(10);marcarNumero(11);marcarNumero(12);marcarNumero(13);marcarNumero(14);marcarNumero(15);marcarNumero(16);marcarNumero(17);marcarNumero(18);marcarNumero(19);">AAAAA</button>
+                <br><br>
+                qtdeNumerosMarcados: {{this.qtdeNumerosMarcados}}
+                <br>
+                qtdeNumerosFaltam: {{this.qtdeNumerosFaltam}}
             </div>
-
-            <!-- Cartela -->
-            <div class="cartela" v-if="currentGame.state == 'on'">
-
-                Marcados: {{this.qtdeNumerosMarcados}}
-
-                <table v-bind:style="currentGame.tableStyle">
-                    <thead>
-                        <tr>
-                            <!-- <th>B</th>
-                            <th>I</th>
-                            <th>N</th>
-                            <th>G</th>
-                            <th>O</th> -->
-                            <th>A</th>
-                            <th>A</th>
-                            <th>A</th>
-                            <th>A</th>
-                            <th>A</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Line B-->
-                        <tr>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[0] ? 'numero-marcado' : '']" v-on:click="marcarNumero(0)">{{this.currentGame.numbersB[0]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[1] ? 'numero-marcado' : '']" v-on:click="marcarNumero(1)">{{this.currentGame.numbersI[0]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[2] ? 'numero-marcado' : '']" v-on:click="marcarNumero(2)">{{this.currentGame.numbersN[0]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[3] ? 'numero-marcado' : '']" v-on:click="marcarNumero(3)">{{this.currentGame.numbersG[0]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[4] ? 'numero-marcado' : '']" v-on:click="marcarNumero(4)">{{this.currentGame.numbersO[0]}}</td>
-                        </tr>
-
-                        <!-- Line I-->
-                        <tr>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[5] ? 'numero-marcado' : '']" v-on:click="marcarNumero(5)">{{this.currentGame.numbersB[1]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[6] ? 'numero-marcado' : '']" v-on:click="marcarNumero(6)">{{this.currentGame.numbersI[1]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[7] ? 'numero-marcado' : '']" v-on:click="marcarNumero(7)">{{this.currentGame.numbersN[1]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[8] ? 'numero-marcado' : '']" v-on:click="marcarNumero(8)">{{this.currentGame.numbersG[1]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[9] ? 'numero-marcado' : '']" v-on:click="marcarNumero(9)">{{this.currentGame.numbersO[1]}}</td>
-                        </tr>
-
-                        <!-- Line N-->
-                        <tr>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[10] ? 'numero-marcado' : '']" v-on:click="marcarNumero(10)">{{this.currentGame.numbersB[2]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[11] ? 'numero-marcado' : '']" v-on:click="marcarNumero(11)">{{this.currentGame.numbersI[2]}}</td>
-                            <td><i class="fas fa-gift"></i></td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[13] ? 'numero-marcado' : '']" v-on:click="marcarNumero(13)">{{this.currentGame.numbersG[2]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[14] ? 'numero-marcado' : '']" v-on:click="marcarNumero(14)">{{this.currentGame.numbersO[2]}}</td>
-                        </tr>
-
-                        <!-- Line G-->
-                        <tr>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[15] ? 'numero-marcado' : '']" v-on:click="marcarNumero(15)">{{this.currentGame.numbersB[3]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[16] ? 'numero-marcado' : '']" v-on:click="marcarNumero(16)">{{this.currentGame.numbersI[3]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[17] ? 'numero-marcado' : '']" v-on:click="marcarNumero(17)">{{this.currentGame.numbersN[3]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[18] ? 'numero-marcado' : '']" v-on:click="marcarNumero(18)">{{this.currentGame.numbersG[3]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[19] ? 'numero-marcado' : '']" v-on:click="marcarNumero(19)">{{this.currentGame.numbersO[3]}}</td>
-                        </tr>
-
-                        <!-- Line O-->
-                        <tr>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[20] ? 'numero-marcado' : '']" v-on:click="marcarNumero(20)">{{this.currentGame.numbersB[4]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[21] ? 'numero-marcado' : '']" v-on:click="marcarNumero(21)">{{this.currentGame.numbersI[4]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[22] ? 'numero-marcado' : '']" v-on:click="marcarNumero(22)">{{this.currentGame.numbersN[4]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[23] ? 'numero-marcado' : '']" v-on:click="marcarNumero(23)">{{this.currentGame.numbersG[4]}}</td>
-                            <td v-bind:class="[this.currentGame.numerosMarcados[24] ? 'numero-marcado' : '']" v-on:click="marcarNumero(24)">{{this.currentGame.numbersO[4]}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-
         </div>
-        <div class="maingrid-footer">
-            <div class="footer">
-                Desenvolvido por <a href="https://www.linkedin.com/in/fellipe-borges-do-nascimento-168534a5/"
-                    target="_blank" title="Linkedin de Fellipe Borges">Fellipe Borges</a>
-            </div>
+
+        
+
+        <div class="footer">
+            Desenvolvido por <a href="https://www.linkedin.com/in/fellipe-borges-do-nascimento-168534a5/"
+                target="_blank" title="Linkedin de Fellipe Borges">Fellipe Borges</a> |
+
+            <a href="https://github.com/fellipeborges/bingo" target="_blank" title="Código fonte no Github">Código
+                fonte</a> <i class="fas fa-code"></i>
+            </a>
         </div>
     </div>
-    <script src="Scripts/App/bingoApp.js"></script>
-    <script src="Scripts/App/screenShortcuts.js"></script>
+    <script src="scripts/bingoApp.js"></script>
 </body>
-
 </html>
