--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -113,7 +113,7 @@
                 Falta apenas 1 número para a cartela cheia!
             </p>
             <p class="faltam faltam-venceu" v-if="qtdeNumerosFaltam == 0">
-                Parabéns, você venceu!
+                Bingo! Você venceu!
             </p>
 
             <!-- Botão Gerar cartela -->
